--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -33,5 +33,13 @@
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="italic"/>
+
+        <Button
+            android:id="@+id/favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            android:text="@string/add_to_favorite"/>
     </LinearLayout>
 </LinearLayout>
